# afm-ingestion

./: .env  .env.example  .gitignore  00_README_START_HERE.md  ADVANCED_FRAUD_DETECTION.md  Dockerfile  FILE_MANIFEST.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS.md  IMPROVEMENTS_COMPLETE.md  INDEX.md  QUICK_REFERENCE.md  README.md  RUN_GUIDE.md  TEST_RESULTS_ADVANCED.md  VISUAL_GUIDE.md  VISUAL_SUMMARY.md  config.py  diagnose_genai.py  docker-compose.yml  dockerfile  features_streamlit.txt  golden_dataset.json  measure_perf.py  progress.md  prometheus.yml  pyproject.toml  requirements.txt  run_server.py  run_tests.sh  temp_old_app.py
app/: __init__.py  admin.py  admin_auth.py  api.py  config.py  database.py  email_service.py  exceptions.py  main.py  models.py  project_context.py  schemas.py  security.py  seed.py
app/classification/: __init__.py  category_service.py  rule_engine.py
app/db/: engine.py  schema.py  writers.py
app/ingestion/: __init__.py  context.py  fraud.py  pipeline.py
app/nl2sql/: __init__.py  advanced_templates.py  catalog_entity_resolver.py  entity_extractor.py  fraud_patterns.py  nl2sql_schema.sql  prompt_builder.py  query_executor.py  query_models.py  query_service.py  schema_registry.py  semantic_retriever.py  sql_debug.py  sql_generator.py  sql_repair.py  sql_validator.py
db_data/: postmaster.pid
db_fix/: init_db.py  init_schema.sql
scripts/: advanced_cli.py  build_semantic.py  debug_halyk.py  debug_halylk.py  debug_nl2sql.py  gemini_llm_test.py  generate_test_data.py  ingest_cli.py  init-db.sql  install.ps1  query_cli.py  seed_catalog.py  streamlit_app.py  streamlit_template.py
tests/: eval_results.json  evaluate_nl2sql.py  golden_dataset.json  test_nl2sql.py
(+275 files in other folders)
