[project]
name = "afm-ingestion"
version = "0.1.0"
description = "AFM project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair<=4",
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.19.0",
    "torch>=2.10.0",
    "uvicorn>=0.42.0",
    "vega-datasets>=0.9.0",
]
