[project]
name = "afm-ingestion"
version = "0.1.0"
description = "AFM project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair<=4",
    "asyncpg==0.30.0",
    "fastapi==0.115.0",
    "google-genai>=1.2.0",
    "gunicorn>=25.1.0",
    "htbuilder>=0.9.0",
    "httpx==0.27.2",
    "itsdangerous>=2.2.0",
    "jose>=1.0.0",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings==2.5.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "sqladmin==0.20.1",
    "sqlalchemy>=2.0.48",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.19.0",
    "streamlit-extras>=0.1.5",
    "torch>=2.10.0",
    "uvicorn[standard]==0.30.6",
    "vega-datasets>=0.9.0",
]
